tests/fixtures/fail/type_alias_cycle.sc
let First: type = Second
let Second: type = First

let main(): First = { 0 }
